--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -604,7 +604,64 @@ header{
 
 
 /*==================== PORTFOLIO ====================*/
+.portfalio__container{
+    overflow: initial;
+}
 
+.portfalio__content{
+    padding: 0 1.5rem;
+}
+
+.portfalio__img{
+    width: 256px;
+    border-radius: .5rem;
+    justify-self: center;
+}
+
+.portfalio__title{
+    font-size: var(--h3-font-size);
+    margin-bottom: var(--mb-0-5);
+}
+
+.portfalio__description{
+    margin-bottom: var(--mb-0-75);
+}
+
+.portfalio__button:hover .button__icon{
+    transform: translateX(.25rem);
+}
+
+.swiper-button-prev::after,
+.swiper-button-next::after{
+    content: '';
+}
+
+ .swiper-portfalio-icon{
+    font-size: 2rem;
+    color: var(--first-color);
+}
+
+.swiper-button-prev{
+    left: -.5rem;
+}
+
+.swiper-button-prev{
+    left: -.5rem;
+}
+
+.swiper-horizontal > .swiper-pagination-bullets{
+    bottom: -2.5rem;
+}
+
+.swiper-pagination-bullet-active{
+    background-color: var(--first-color);
+} 
+
+.swiper-button-prev,
+.swiper-button-next,
+.swiper-pagination-bullet{
+    outline: none;
+}
 
 /*==================== PROJECT IN MIND ====================*/
 
