--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -388,7 +388,7 @@ header{
 
 .about__description{
     text-align: center;
-    margin-bottom: var(--mb-2-5);
+    margin-bottom: var(--mb-1);
 }
 
 .about__info{
